--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework js 12</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" src="./main.js"></script>
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <div class="conteiner">
+        <form class="group-form">
+          <input
+            type="text"
+            name="query"
+            class="input"
+            placeholder="Search images..."
+            autocomplete="off"
+            required
+          />
+          <button type="submit" class="style-submit">Search</button>
+        </form>
+
+        <ul class="gallery"></ul>
+        <div class="loader"></div>
+        <button class="load-more-btn is-hidden" type="button">Load more</button>
+      </div>
     </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
