--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,21 @@
   </head>
   <body>
     <main>
-      <div class="conteiner">
-        <form class="group-form">
+      <div class="form-container">
+        <form class="form-search">
           <input
             type="text"
-            name="query"
-            class="input"
+            class="form-input"
+            name="user_query"
             placeholder="Search images..."
-            autocomplete="off"
-            required
           />
-          <button type="submit" class="style-submit">Search</button>
+          <button class="form-btn" type="submit">Search</button>
         </form>
-
-        <ul class="gallery"></ul>
-        <div class="loader"></div>
-        <button class="load-more-btn is-hidden" type="button">Load more</button>
       </div>
+      <div class="gallery"></div>
+      <div class="loader"></div>
+      <button class="load-more-btn is-hidden" type="button">Load more</button>
+      <script type="module" src="./main.js"></script>
     </main>
   </body>
 </html>
