--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </form>
       </div>
       <div class="gallery"></div>
-      <div class="loader"></div>
+      <span class="loader"></span>
       <button class="load-more-btn is-hidden" type="button">Load more</button>
       <script type="module" src="./main.js"></script>
     </main>
